k8s/3.remove_bottle_services_with_highest_latency/bottles-dep-new-line.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bottles-dep-new-line
  labels:
    app: bottles
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bottles
      version: v3
  template:
    metadata:
      labels:
        app: bottles
        version: v3
    spec:
      containers:
      - name: bottles
        image: meshery20/bottle-producer:1.1.0
        ports:
        - containerPort: 3002
        imagePullPolicy: Always
