k8s/3.remove_bottle_services_with_highest_latency/bottles-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bottles-vs
spec:
  hosts:
  - bottles
  http:
  - route:
    - destination:
        host: bottles
        subset: v1
      weight: 10
    - destination:
        host: bottles
        subset: v2
      weight: 10
    - destination:
        host: bottles
        subset: v3
      weight: 80
